--- a/v2/src/index.html
+++ b/v2/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 </head>
 
-<body>
+<body id="wrapper">
 </body>
 
 </html>
